<resources>
    <string name="app_name">Smart City Assistant</string>

    <!-- Main Menu Titles -->
    <string name="SchedulePlanner">Έξυπνο Πλάνο Ημέρας</string>
    <string name="SmartHomeManager">Έξυπνο Σπίτι</string>
    <string name="OnlineOrder">On-Line Παραγγελίες Φαγητού - Καφέ</string>
    <string name="ElderMonitoring">Σύστημα Παρακολούθησης Ηλικιωμένων</string>

    <!-- Main Menu Descriptions -->
    <string name="SchedulePlanner_Description">Διαμορφώστε το πρόγραμμα της ημέρας σας!</string>
    <string name="SmartHomeManager_Description">Διαχειριστείτε εύκολα και γρήγορα τις συσκευές του σπιτιού σας με την άκρη των δακτύλων σας!</string>
    <string name="OnlineOrder_Description">Παραγγείλτε γρήγορα φαγητό ή καφέ μέσα από μια μεγάλη λίστα ηλεκτρονικών καταστημάτων!</string>
    <string name="title_activity_smart_schedule_planner">Smart Schedule Planner</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="ElderMonitoring_Description">Παρακολουθήστε τα αγαπημένα σας άτομα, και προσφέρετέ τους βοήθεια όταν την χρειάζονται.</string>


    <string name="AddPlace">Add Waypoint</string>
    <string name="isFinalDestination">Είναι ο τελικός σας προορισμός;</string>
    <string name="AddressDetected">Εντοπίστηκε η διεύθυνσή σας: </string>
    <string name="NoSelectedPlace">Δεν έχετε επιλέξει προορισμό.</string>

    <string name="WaypointAlrExists">Ο προορισμός που προσπαθείτε να προσθέσετε υπάρχει ήδη στην λίστα προορισμών.</string>

    <string name="TravelOptions">Επιλογές Διαδρομής</string>
    <string name="OK">ΟΚ</string>
    <string name="cancel">Άκυρο</string>

    <string name="driving">Οδήγηση</string>
    <string name="bicycling">Ποδήλατο</string>
    <string name="walking">Περπάτημα</string>
    <string name="transit">Δημόσια Μέσα</string>

    <string name="travel_mode">Τρόπος Διεξαγωγής Διαδρομής</string>
    <string name="parking_cb">Επιθυμώ να ευρεθεί θέση Parking</string>

    <string name="misc_options">Επιπλέον επιλογές:</string>
    <string name="no_routes">Καμία διαθέσιμη διαδρομή.</string>

    <string name="no_more_than_2_wp_allowed">Δεν είναι δυνατός ο προσδιορισμός διαδρομής με Δημόσια μέσα όταν υπάρχουν περισσότεροι των δύο προορισμοί.</string>

    <string name="no_more_than_2_wp_allowed_switched">Δεν είναι δυνατός ο προσδιορισμός διαδρομής με Δημόσια μέσα όταν υπάρχουν περισσότεροι των δύο προορισμοί. Ενεργοποιήθηκε η λειτουργία οδήγησης.</string>
    <string name="parking_spot">Σημείο Parking</string>

    <string name="travel_duration">Συνολική διάρκεια διαδρομής: </string>

    <string name="arrival_time">Ώρα άφιξης</string>

    <string name="IllegalTimeGiven">Δώθηκε μη έγκυρος χρόνος άφιξης. Παρακαλούμε ξαναπροσπαθήστε.</string>

    <string name="IllegalMoveAttempt">Αδύνατη η μετακίνηση. Δεν πρέπει να έχει οριστεί χρόνος άφιξης για τον προορισμό που μετακινείται.</string>

    <string name="new_entry">Τίτλος Νέας Εγγραφής:</string>

    <string name="no_entry_title_set">Εγγραφή χωρίς τίτλο</string>

    <string name="location_access_needed">Απαιτείται πρόσβαση στην ακριβή σας τοποθεσία προκειμένου να λειτουργήσει το Εξυπνο Πλάνο Ημέρας.</string>

    <string name="internet_not_connected">Παρακαλούμε ελέγξτε την σύνδεσή σας και ξαναδοκιμάστε.</string>

    <string name="device_name">Όνομα Συσκευής</string>

    <string name="device_location">Τοποθεσία συσκευής</string>

    <string name="activate_deactivate">Ενεργοποίηση\/Απενεργοποίηση</string>

    <string name="device_errors">Σφάλμα:</string>

    <string name="extra_settings">Επιπλέον ρυθμίσεις συσκευής:</string>

    <string name="payment_method_choice">Επισκόπηση Παραγγελίας</string>
    <string name="dish_picking_choice">Επιλογή Πιάτων</string>

    <string name="select_restaurant_to_view">Επιλέξτε εστιατόριο από τα αριστερά για να δείτε λεπτομέρειες για αυτό εδώ.</string>

    <string name="restaurant_name">Όνομα Εστιατορίου</string>
    <string name="restaurant_location">Τοποθεσία</string>
    <string name="restaurant_cuisine">Κουζίνα</string>
    <string name="label_dish_picker">Επιλέξτε πιάτα για την παραγγελία σας:</string>
    <string name="cart">Καλάθι</string>
    <string name="dish_name">Όνομα Πιάτου:</string>
    <string name="dish_type">Τύπος:</string>
    <string name="dish_price">Τιμή:</string>
    <string name="add_to_cart">Προσθήκη στο καλάθι</string>
    <string name="confirm_order">Επιβεβαίωση Παραγγελίας</string>
    <string name="review_helper">Εισάγετε παρακάτω τα στοιχεία αποστολής της παραγγελίας.</string>
    <string name="name">Ονοματεπώνυμο</string>
    <string name="phone">Τηλέφωνο</string>
    <string name="address">Διεύθυνση</string>
    <string name="email">Διεύθυνση email</string>
    <string name="no_items_in_cart">Δεν υπάρχουν αντικείμενα στο καλάθι.</string>
    <string name="credit_card_number">Αριθμός Κάρτας (Χωρίς τις παύλες)</string>
    <string name="credit_card_exp">Ημ. Λήξης (Σε μορφή MM/YY)</string>
    <string name="credit_card_cvc">CVC</string>
    <string name="cash_on_delivery">Αντικαταβολή</string>
    <string name="credit_card">Πιστωτική/Χρεωστική Κάρτα</string>
    <string name="payment_method">Τρόπος Πληρωμής</string>
    <string name="total_price">Συνολικό οφειλούμενο ποσό</string>
    <string name="invalid_data">Δώθηκαν μή έγκυρα στοιχεία. Παρακαλούμε ξαναδοκιμάστε.</string>
    <string name="elder_name">Όνομα Ηλικιωμένου</string>
    <string name="elder_location">Τοποθεσία ηλικιωμένου</string>
    <string name="sending_message">Αναμονή απάντησης...</string>
    <string name="send_status_question">Ερώτηση Κατάστασης</string>
    <string name="help">Βοήθεια</string>
    <string name="help_url">https://drive.google.com/open?id=0ByFo97YBQLLubFdIdkpFQ0JFR2c</string>
    <string name="waypoint_location">Τοποθεσία προορισμού/ενδιάμεσου σημείου:</string>
    <string name="device_status">Κατάσταση:</string>
    <string name="copyright">Copyright &#169; Κυριάκος Γιαννάκης, Βασίλης Ζωγράφος 2016&#8211;2017 \n Η εφαρμογή υπόκειται στην άδεια MIT</string>
    <string name="about_the_app">Σχετικά με την εφαρμογή</string>
    <string name="github_link">https://github.com/kerk12/SmartCityAssistant</string>
</resources>
