<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    tools:context="com.kerk12.smartcityassistant.MainMenuFragment"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    >

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="normal|bold"
        android:textSize="60sp"
        android:paddingBottom="35dp"
        android:paddingTop="35dp"
        />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/MainMenuMapChoice"
        style="@style/MainMenu_CardView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/map_icon"
                android:id="@+id/imageView" />

            <TextView
                android:text="@string/SchedulePlanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                style="@style/MainMenu_ChoiceTitle"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/imageView" />

            <TextView
                android:text="@string/SchedulePlanner_Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imageView" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/MainMenuHomeManagementChoice"
        style="@style/MainMenu_CardView"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:paddingTop="5dp"
                app:srcCompat="@drawable/coffee_machine"
                android:id="@+id/imageView2" />

            <TextView
                android:text="@string/SmartHomeManager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                style="@style/MainMenu_ChoiceTitle"
                android:layout_toEndOf="@+id/imageView2" />

            <TextView
                android:text="@string/SmartHomeManager_Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imageView2" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/MainMenuOldPeopleChoice"
        style="@style/MainMenu_CardView"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:paddingTop="5dp"
                app:srcCompat="@drawable/eorder"
                android:id="@+id/imageView3" />

            <TextView
                android:text="@string/OnlineOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                style="@style/MainMenu_ChoiceTitle"
                android:layout_toEndOf="@+id/imageView3" />

            <TextView
                android:text="@string/OnlineOrder_Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imageView3" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>
