<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_eorder_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="com.kerk12.smartcityassistant.EOrderMainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:padding="10dp"
        android:background="@drawable/catering">
        <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/whiteBcgr"
            android:layout_marginRight="10dp"
            android:id="@+id/restaurant_picker"
            android:padding="7dp">

        </android.support.v7.widget.RecyclerView>
        <!-- The details -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/whiteBcgr"
            android:padding="15dp">

            <TextView
                android:text="@string/select_restaurant_to_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textSize="10sp"
                android:layout_marginTop="14dp"
                android:id="@+id/helper_text"
                 />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/helper_text"
                android:padding="15dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/details_view"
                android:visibility="invisible"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurant_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:id="@+id/restaurant_name_details" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/restaurant_cuisine"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:id="@+id/restaurant_cuisine_details"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/restaurant_location"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:id="@+id/restaurant_location_details"/>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"
        android:id="@+id/restaurant_pick_button"
        android:text="@string/dish_picking_choice"
        style="@style/ButtonGreen"
        android:textSize="25sp"
        android:enabled="false"/>

</LinearLayout>