<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout

    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="10dp">
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_weight="1.5"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        tools:context="com.kerk12.smartcityassistant.SmartSchedulePlanner" />
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="12dp"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:id="@+id/SchedulePlannerRecyclerview"
            android:layout_height="0dp"
            android:background="@color/cardview_light_background"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/duration"
            android:text="@string/travel_duration"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/instructions"
            android:layout_weight=".35"
            android:visibility="invisible"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".75"
            android:orientation="vertical"
            android:id="@+id/AddWaypointContainer">

            <TextView
                android:text="@string/new_entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/new_entry_title"/>

            <TextView
                android:text="@string/waypoint_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <fragment android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                android:id="@+id/AddPlaceFr"
                xmlns:android="http://schemas.android.com/apk/res/android" />

            <TextView
                android:text="@string/TravelOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/arrival_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/WantedTime"
                    style="@style/ButtonGreen"
                    android:layout_weight="1" />

                <Button
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:padding="2dp"
                    android:id="@+id/TravelOptions"
                    android:text="@string/TravelOptions"
                    style="@style/ButtonGreen"
                    android:layout_weight="1" />
            </LinearLayout>

            <!-- TO BE REMOVED -->
            <!--<CheckBox-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/isFinalDestinationCB"/>-->
        </LinearLayout>
    </LinearLayout>



</LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|right"
        android:src="@drawable/add"
        android:id="@+id/AddWaypointButton"
        app:backgroundTint="@color/colorPrimaryDark">

    </android.support.design.widget.FloatingActionButton>
</android.support.design.widget.CoordinatorLayout>